kubernetes/apps/cilium-network-policies/manifest/templates/cilium-network-policy-logs.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-egress-alloy-logs"
spec:
  description: "Allow Alloy"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: k8s-monitoring-alloy-logs
      app.kubernetes.io/name: alloy-logs
      io.kubernetes.pod.namespace: k8s-monitoring
  egress:
    - toEndpoints:
        - matchLabels: {}
      authentication:
        mode: "required"
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
