kubernetes/apps/cilium-network-policies/manifest/templates/cilium-network-policy-metrics.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-egress-alloy-metrics"
spec:
  description: "Allow Alloy"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: k8s-monitoring-alloy-metrics
      app.kubernetes.io/name: alloy-metrics
  egress:
    - toEndpoints:
        - matchLabels: {}
      authentication:
        mode: "required"
