kubernetes/apps/cilium-network-policies/manifest/templates/zero-trust-baseline.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "zero-trust-baseline"
spec:
  description: "Apply default-deny ONLY"
  endpointSelector:
    matchExpressions:
      - key: "io.kubernetes.pod.namespace"
        operator: In
        values:
          - whoami
          - uptime-kuma
          - trivy-converter
          - sealed-secrets
          - renovate
          - netbox
          - minio
          - mimir
          - metric-server
          - longhorn-system
          - loki
          - kyverno-reporter
          - kyverno-policies
  ingress:
    - {}
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
